<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

    <ImageView
        android:id="@+id/img"
        android:layout_width="313dp"
        android:layout_height="203dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="10dp"
        app:srcCompat="@drawable/levo" />

    <TextView
        android:id="@+id/text1"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:textSize="20dp"
        android:textColor="@color/tcolor"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_below="@+id/img"/>

    <EditText
        android:id="@+id/etext1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:inputType="textPersonName"
        android:hint="Name"
        android:layout_below="@+id/text1"/>

    <TextView
        android:id="@+id/text2"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:textSize="20dp"
        android:textColor="@color/tcolor"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:layout_below="@+id/etext1"/>

    <EditText
        android:id="@+id/etext2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:inputType="textPersonName"
        android:hint="Age"
        android:layout_below="@+id/text2"/>

    <RadioButton
        android:id="@+id/rbtn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etext2"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/male"
        android:textColor="@color/tcolor"
        android:textSize="20dp"
        android:textStyle="bold" />
    <RadioButton
        android:id="@+id/rbtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etext2"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="-29dp"
        android:text="@string/female"
        android:textColor="@color/tcolor"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text3"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:textSize="20dp"
        android:textColor="@color/tcolor"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_below="@+id/rbtn1"/>

    <EditText
        android:id="@+id/etext3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:inputType="textPersonName"
        android:hint="Address"
        android:layout_below="@+id/text3"/>
    <TextView
        android:id="@+id/text4"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:textSize="20dp"
        android:textColor="@color/tcolor"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:layout_below="@+id/etext3"/>
    <EditText
        android:id="@+id/etext4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:inputType="textPersonName"
        android:hint="City"
        android:layout_below="@+id/text4"/>
            <TextView
                android:id="@+id/text5"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:textSize="20dp"
                android:textColor="@color/tcolor"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phn"
                android:layout_below="@+id/etext4"/>
            <EditText
                android:id="@+id/etext5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:inputType="textPersonName"
                android:hint="Phone Number"
                android:layout_below="@+id/text5"/>
            <TextView
                android:id="@+id/text6"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:textSize="20dp"
                android:textColor="@color/tcolor"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_below="@+id/etext5"/>
            <EditText
                android:id="@+id/etext6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:inputType="textPersonName"
                android:hint="email@gmail.com"
                android:layout_below="@+id/text6"/>


            <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        android:textStyle="bold"
        android:textColor="@color/btcolor"
        android:background="@drawable/button"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/etext6"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>